<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/action_about"/>-->
    <item
        android:id="@+id/action_clear_slot"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_clear_slot"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh_slot"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh_slot"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_adv_advertised_tx_power"
        android:title="@string/action_adertised_tx_power"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_lock"
        android:title="@string/action_lock"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_remain_connectable"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_remain_connectable"/>
    <item
        android:id="@+id/action_factory_reset"
        android:title="@string/action_factory_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_ecdh_info"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_ecdh_info"/>
    <item
        android:id="@+id/action_register_beacons"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_register_beacon"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about"/>
</menu>