<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/alert_dialog_padding_left"
    android:paddingRight="@dimen/alert_dialog_padding_right"
    android:paddingBottom="@dimen/alert_dialog_padding_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/active_slot_title"/>

        <TextView
            android:id="@+id/active_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/frame_type"/>

        <TextView
            android:id="@+id/frame_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecdh_key"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/ecdh_public_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_identity_key"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/encrypted_ecdh_identity_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrypted_identity_key"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/decrypted_ecdh_identity_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>